# lodlink

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  README_PACKAGE.md  RESUME_CONVERSION.md  UV_COMMANDS.md  config_example.txt  pyproject.toml  quick_start.sh  requirements.txt
.claude/: settings.local.json
src/lodlink/: __init__.py  cli.py  config.py  data_parser.py  haplopainter.py  html_viz.py  lod_engine.py  pedigree.py  visualizations.py
tests/: test_shared_region.py
