[project]
name = "lodlink"
version = "1.0.0"
description = "Pipeline d'analyse de liaison génétique - Alternative moderne à Merlin avec LOD scores paramétriques/NPL et visualisations HaploPainter"
readme = "README.md"
authors = [
    { name = "Alexandre MATHIEU", email = "amathieu@pasteur.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "tqdm>=4.65",
    "requests>=2.31",
]
license = {text = "MIT"}
keywords = ["genetics", "linkage-analysis", "lod-score", "pedigree", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/bourgeron-lab/lodlink"
Repository = "https://github.com/bourgeron-lab/lodlink"
Documentation = "https://github.com/bourgeron-lab/lodlink#readme"

[project.scripts]
lodlink = "lodlink.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lodlink"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.1",
]
